--- a/Views/checkout.html
+++ b/Views/checkout.html
@@ -17,21 +17,27 @@
             <div class="row">
               <div class="col-12 col-md-12">
                 <div class="form-group">
-                  <label for="firstName">First Name *</label>
+                  <label for="firstName" class="form-label">First name *</label>
                   <input
                     type="text"
-                    class="form-control"
+                    class="form-control is-valid"
                     id="firstName"
+                    value="Mark"
                     required
                   />
+                  <div class="valid-feedback">Looks good!</div>
                 </div>
               </div>
               <div class="col-12 col-md-12"></div>
             </div>
           </div>
         </div>
+        <input type="submit" value="Submit" />
       </form>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script>
+      document
+    </script>
   </body>
 </html>
