--- a/Views/checkout.html
+++ b/Views/checkout.html
@@ -10,34 +10,256 @@
   <body>
     <div class="container">
       <h2>Checkout</h2>
-      <form>
-        <div class="row">
-          <div class="col-12 col-md-6">
-            <h3>Billing Details</h3>
-            <div class="row">
-              <div class="col-12 col-md-12">
-                <div class="form-group">
-                  <label for="firstName" class="form-label">First name *</label>
-                  <input
-                    type="text"
-                    class="form-control is-valid"
-                    id="firstName"
-                    value="Mark"
-                    required
-                  />
-                  <div class="valid-feedback">Looks good!</div>
-                </div>
-              </div>
-              <div class="col-12 col-md-12"></div>
+      <form class="row g-3 needs-validation" novalidate>
+        <!-- Deviding the checkout into two rows -->
+        <div class="col-12 col-md-6">
+          <!-- billing row -->
+          <h3>Billing Details</h3>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <label for="firstName" class="form-label">First name</label>
+              <input
+                placeholder=""
+                type="text"
+                class="form-control"
+                id="firstName"
+                name="firstName"
+                required
+              />
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="col-12 col-md-6">
+              <label for="lastName" class="form-label">Last name</label>
+              <input
+                type="text"
+                class="form-control"
+                id="lastName"
+                name="lastName"
+                required
+              />
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="col-12">
+              <label for="email" class="form-label">Email</label>
+              <input
+                type="email"
+                class="form-control"
+                id="email"
+                name="email"
+                required
+              />
+              <div class="invalid-feedback">Please select a valid Email.</div>
+            </div>
+            <div class="col-12">
+              <label for="country" class="form-label">Country</label>
+              <select class="form-select" id="country" required>
+                <option selected disabled value="Egypt">Egypt</option>
+                <option selected disabled value="Iraq">Iraq</option>
+                <option selected disabled value="Iran">Iran</option>
+                <option selected disabled value="Brazil">Brazil</option>
+                <option selected disabled value="Canda">Canda</option>
+                <option>...</option>
+              </select>
+              <div class="invalid-feedback">Please select a valid country.</div>
+            </div>
+            <div class="col-12">
+              <label for="state" class="form-label">State</label>
+              <input
+                type="text"
+                class="form-control"
+                id="state"
+                required
+                name="state"
+              />
+              <div class="invalid-feedback">Please select a valid State.</div>
+            </div>
+            <div class="col-12">
+              <label for="city" class="form-label">City</label>
+              <input
+                type="text"
+                class="form-control"
+                id="city"
+                name="city"
+                required
+              />
+              <div class="invalid-feedback">Please select a valid City.</div>
+            </div>
+            <div class="col-12">
+              <label for="street" class="form-label">Street</label>
+              <input
+                type="text"
+                class="form-control"
+                id="street"
+                required
+                name="street"
+              />
+              <div class="invalid-feedback">Please select a valid street.</div>
+            </div>
+
+            <div class="col-12">
+              <label for="phone" class="form-label">Phone</label>
+              <input
+                type="text"
+                class="form-control"
+                id="phone"
+                required
+                name="phone"
+              />
+              <div class="invalid-feedback">Please select a valid phone.</div>
+            </div>
+            <div class="col-12">
+              <label for="zipcode" class="form-label"
+                >Zipcode/ Postalcode</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="zipcode"
+                required
+                name="zipcode"
+              />
+              <div class="invalid-feedback">Please select a valid phone.</div>
             </div>
           </div>
         </div>
-        <input type="submit" value="Submit" />
+        <!-- End of billing col -->
+        <!-- Shipping col -->
+        <div class="col-12 col-md-6">
+          <!-- billing row -->
+          <h3>Billing Details</h3>
+          <div class="row">
+            <div class="col-12 col-md-12">
+              <label for="firstName" class="form-label">First name</label>
+              <input type="text" class="form-control" id="firstName" required />
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+            <div class="col-12 col-md-12">
+              <label for="lastName" class="form-label">Last name</label>
+              <input type="text" class="form-control" id="lastName" required />
+              <div class="valid-feedback">Looks good!</div>
+            </div>
+          </div>
+        </div>
+
+        <!-- End of shipping col -->
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
       </form>
+      <!-- <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4">
+          <label for="validationCustom01" class="form-label">First name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationCustom01"
+            
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustom02" class="form-label">Last name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationCustom02"
+            value="Otto"
+            required
+          />
+          <div class="valid-feedback">Looks good!</div>
+        </div>
+        <div class="col-md-4">
+          <label for="validationCustomUsername" class="form-label"
+            >Username</label
+          >
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="inputGroupPrepend">@</span>
+            <input
+              type="text"
+              class="form-control"
+              id="validationCustomUsername"
+              aria-describedby="inputGroupPrepend"
+              required
+            />
+            <div class="invalid-feedback">Please choose a username.</div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <label for="validationCustom03" class="form-label">City</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationCustom03"
+            required
+          />
+          <div class="invalid-feedback">Please provide a valid city.</div>
+        </div>
+        <div class="col-md-3">
+          <label for="country" class="form-label">State</label>
+          <select class="form-select" id="country" required>
+            <option selected disabled value="">Choose...</option>
+            <option>...</option>
+          </select>
+          <div class="invalid-feedback">Please select a valid state.</div>
+        </div>
+        <div class="col-md-3">
+          <label for="validationCustom05" class="form-label">Zip</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationCustom05"
+            required
+          />
+          <div class="invalid-feedback">Please provide a valid zip.</div>
+        </div>
+        <div class="col-12">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="invalidCheck"
+              required
+            />
+            <label class="form-check-label" for="invalidCheck">
+              Agree to terms and conditions
+            </label>
+            <div class="invalid-feedback">
+              You must agree before submitting.
+            </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form> -->
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script>
-      document
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (() => {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        const forms = document.querySelectorAll(".needs-validation");
+
+        // Loop over them and prevent submission
+        Array.from(forms).forEach((form) => {
+          form.addEventListener(
+            "submit",
+            (event) => {
+              if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        });
+      })();
     </script>
   </body>
 </html>
