--- a/Views/admin.html
+++ b/Views/admin.html
@@ -42,9 +42,13 @@
       margin-bottom: 0; 
     }
     .navbar-logo img {
-      max-height: 100px;  
-      width: auto;       
-    }
+      margin-top: 20px;
+      margin-left: 7px;
+      height: 60px;
+      width: 160px;
+
+    }    
+    
     
     .content-wrapper {
       display: flex;
