--- a/Views/admin/admin_users.html
+++ b/Views/admin/admin_users.html
@@ -6,6 +6,7 @@
     <title>Transaction Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="script" href="../js/admin_users.js">
 </head>
 <body class="bg-light">
 
