--- a/Views/css/sellerDashboard.css
+++ b/Views/css/sellerDashboard.css
@@ -59,7 +59,11 @@ main {
   align-items: center;
   margin-bottom: 1rem;
 }
-
+.create_new_product {
+  height: 30px;
+  display: flex;
+  align-items: center;
+}
 .header h1 {
   font-size: 1.25rem; /* Reduced size */
   font-weight: bold; /* Made it bold */
