--- a/Views/sellerDashboard.html
+++ b/Views/sellerDashboard.html
@@ -348,13 +348,314 @@
       </div>
     </div>
 
+    <!-- Create Modal -->
+
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary d-none"
+      id="createLaunchBtn"
+      data-bs-toggle="modal"
+      data-bs-target="#createProductModal"
+    >
+      Launch static backdrop modal
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="createProductModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="createProductModalLabel"
+      aria-hidden="true"
+    >
+      <!-- Vertically centered scrollable modal -->
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Modal title
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Your form goes here -->
+            <form id="createForm" class="row">
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="createProductName">Product Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="createProductName"
+                    placeholder="Product Name"
+                  />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="createProductPrice">Product Price</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="createProductPrice"
+                    placeholder="Product Price"
+                  />
+                </div>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="createProductDesc">Product Description</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="createProductDesc"
+                    placeholder="Product Description"
+                  />
+                </div>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="createProductCategory">Product Category</label>
+                  <select
+                    class="form-control"
+                    id="createProductCategory"
+                  ></select>
+                </div>
+              </div>
+
+              <div class="col-12 mb-3">
+                <label for="createProductImage" class="form-label"
+                  >Product Image</label
+                >
+                <input
+                  type="file"
+                  class="form-control"
+                  id="createProductImage"
+                  accept="image/*"
+                />
+                <div class="mt-3">
+                  <img
+                    id="createproductImagePreview"
+                    src=""
+                    alt="Product Preview"
+                    class="img-thumbnail"
+                    style="max-width: 150px; display: none"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" id="createSaveBtn" class="btn btn-primary">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Edit Modal -->
+
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary d-none"
+      id="launchBtn"
+      data-bs-toggle="modal"
+      data-bs-target="#staticBackdrop"
+    >
+      Launch static backdrop modal
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="staticBackdrop"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <!-- Vertically centered scrollable modal -->
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Modal title
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <!-- Your form goes here -->
+            <form id="editForm" class="row">
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="editProductName">Product Name</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editProductName"
+                    placeholder="Product Name"
+                  />
+                </div>
+              </div>
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="editProductPrice">Product Price</label>
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="editProductPrice"
+                    placeholder="Product Price"
+                  />
+                </div>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="editProductDesc">Product Description</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="editProductDesc"
+                    placeholder="Product Description"
+                  />
+                </div>
+              </div>
+
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="editProductCategory">Product Category</label>
+                  <select
+                    class="form-control"
+                    id="editProductCategory"
+                  ></select>
+                </div>
+              </div>
+
+              <div class="col-12 mb-3">
+                <label for="editProductImage" class="form-label"
+                  >Product Image</label
+                >
+                <input
+                  type="file"
+                  class="form-control"
+                  id="editProductImage"
+                  accept="image/*"
+                />
+                <div class="mt-3">
+                  <img
+                    id="editproductImagePreview"
+                    src=""
+                    alt="Product Preview"
+                    class="img-thumbnail"
+                    style="max-width: 150px; display: none"
+                  />
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" id="editSaveBtn" class="btn btn-primary">
+              Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Delete modal confirmation -->
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary d-none"
+      data-bs-toggle="modal"
+      data-bs-target="#deleteConfiremation"
+      id="deleteConfirmBtn"
+    >
+      Launch demo modal
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="deleteConfiremation"
+      tabindex="-1"
+      aria-labelledby="deleteConfiremationLabel"
+      aria-hidden="true"
+      data-productId="0"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="deleteConfiremationLabel">
+              Modal title
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            Are Sure you want to delete this product?
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+              id="noDeleteBtn"
+            >
+              No
+            </button>
+            <button type="button" id="confirmDeleteBtn" class="btn btn-primary">
+              Yes
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- Custom Script -->
     <script src="./js/sellerDashboard.js" type="module"></script>
     <script type="module">
       import { DbRepo } from "../Repository/DbRepo.js";
-      localStorage.clear();
+      // localStorage.clear();
+      // indexedDB.deleteDatabase("AppDB");
       DbRepo.setUpLocalStorage();
     </script>
   </body>
