--- a/Views/css/contact.css
+++ b/Views/css/contact.css
@@ -1,57 +1,40 @@
-  .error-page {
-    min-height: 100vh;
-    /* background: linear-gradient(45deg, #DB4444 0%, #000000 100%); */
+body {
+    border: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
-}
-
-.error-container {
-    max-width: 600px;
-}
-
-.error-code {
-    font-size: 12rem;
-    font-weight: 900;
-    /* background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0.5)); */
-    background-color: #DB4444;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: pulse 2s infinite;
-}
-
-.error-message {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-@keyframes pulse {
-    0% {
-        transform: scale(1);
-    }
-
-    50% {
-        transform: scale(1.05);
-    }
-
-    100% {
-        transform: scale(1);
-    }
-}
-
-.btn-glass {
-    background: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    color: white;
-    transition: all 0.3s ease;
-}
-
-.btn-glass:hover {
-    background: rgba(255, 255, 255, 0.3);
     color: white;
 }
 
-
-/* Animated Button to go home */
-.btn-animated {
+  h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat-Bold";
+  }
+  
+  p {
+    color: #8f8f8f;
+  }
+  
+  /* Headings */
+  
+  .big-heading {
+    font-family: "Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+  }
+  
+  .section-heading {
+    font-size: 3rem;
+    line-height: 1.5;
+  }
+  
+  /* Containers */
+  
+  .container-fluid{
+    padding: 7% 15%;
+  }
+  
+  .btn-animated {
     position: relative;
     overflow: hidden;
     transition: color 0.3s ease-out;
@@ -69,12 +52,13 @@
 }
 
 
+  
+ 
+  
 
+  
 
-
-
-
-.footer {
+  .footer {
     background: black;
     color: #ffffff;
     padding: 70px 0 30px;
@@ -240,3 +224,22 @@
         margin-bottom: 40px;
     }
 }
+ 
+
+  
+
+
+  
+
+  
+  @media (max-width: 1028px) {
+  
+    #title {
+      text-align: center;
+    }
+  
+    .title-image {
+      position: static;
+      transform: rotate(0);
+    }
+  }
