--- a/Views/sellerDashboard.html
+++ b/Views/sellerDashboard.html
@@ -13,6 +13,12 @@
     />
     <!-- seller dashboard styles -->
     <link rel="stylesheet" href="css/sellerDashboard.css" />
+
+    <!-- clearing data -->
+    <!-- <script>
+      localStorage.clear();
+      indexedDB.deleteDatabase("AppDB");
+    </script> -->
   </head>
   <body>
     <div class="content-wrapper">
@@ -91,7 +97,6 @@
           <ul
             class="dropdown-menu text-small shadow"
             aria-labelledby="dropdownUser2"
-            style=""
           >
             <li><a class="dropdown-item" href="#">New project...</a></li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
@@ -433,6 +438,20 @@
                 </div>
               </div>
 
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="createProductQty" class="form-label"
+                    >Product Quantity</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="createProductQty"
+                    placeholder="Product Quantity"
+                  />
+                </div>
+              </div>
+
               <div class="col-12 mb-3">
                 <label for="createProductImage" class="form-label"
                   >Product Image</label
@@ -556,6 +575,20 @@
                 </div>
               </div>
 
+              <div class="col-12 col-md-6">
+                <div class="form-group">
+                  <label for="editProductQty" class="form-label"
+                    >Product Quantity</label
+                  >
+                  <input
+                    type="number"
+                    class="form-control"
+                    id="editProductQty"
+                    placeholder="Product Quantity"
+                  />
+                </div>
+              </div>
+
               <div class="col-12 mb-3">
                 <label for="editProductImage" class="form-label"
                   >Product Image</label
@@ -648,14 +681,197 @@
       </div>
     </div>
 
+    <!-- Orders Modals -->
+
+    <!-- order details Modal -->
+
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary d-none"
+      id="orderDetailLaunchBtn"
+      data-bs-toggle="modal"
+      data-bs-target="#orderDetailsModal"
+    >
+      Launch static backdrop modal
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="orderDetailsModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="orderDetailsModalLabel"
+    >
+      <!-- Vertically centered scrollable modal -->
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content" style="max-width: 1000px">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="orderDetailsModalLabel">
+              Order Details
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <section class="h-100 h-custom" style="background-color: #eee">
+              <div
+                class="row d-flex justify-content-center align-items-center h-100"
+              >
+                <div style="flex: 1 0 100%">
+                  <div
+                    class="card border-top border-bottom border-3"
+                    style="border-color: #f37a27 !important"
+                  >
+                    <div class="card-body p-2">
+                      <p class="lead fw-bold mb-5" style="color: #f37a27">
+                        Order Details
+                      </p>
+
+                      <div class="row">
+                        <div class="col mb-3">
+                          <p class="small text-muted mb-1">Date</p>
+                          <p>10 April 2021</p>
+                        </div>
+                        <div class="col mb-3">
+                          <p class="small text-muted mb-1">Order No.</p>
+                          <p>012j1gvs356c</p>
+                        </div>
+                      </div>
+
+                      <div
+                        class="mx-n5 px-5 py-4"
+                        style="background-color: #f2f2f2"
+                      >
+                        <div class="row">
+                          <div class="col-md-8 col-lg-9">
+                            <p
+                              data-bs-toggle="tooltip"
+                              data-bs-placement="left"
+                              title="BEATS Solo 3 Wireless Headphones"
+                              class="truncated-text"
+                              style="width: 100px"
+                            >
+                              BEATS Solo 3 Wireless Headphones
+                            </p>
+                          </div>
+                          <div class="col-md-4 col-lg-3">
+                            <p>£299.99</p>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-md-8 col-lg-9">
+                            <p class="mb-0">Shipping</p>
+                          </div>
+                          <div class="col-md-4 col-lg-3">
+                            <p class="mb-0">£33.00</p>
+                          </div>
+                        </div>
+                      </div>
+
+                      <div class="row my-4">
+                        <div class="col-md-4 offset-md-8 col-lg-3 offset-lg-9">
+                          <p class="lead fw-bold mb-0" style="color: #f37a27">
+                            £262.99
+                          </p>
+                        </div>
+                      </div>
+
+                      <!-- <p class="lead fw-bold mb-4 pb-2" style="color: #f37a27">
+                        Tracking Order
+                      </p>
+
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <div class="horizontal-timeline">
+                            <ul
+                              class="list-inline items d-flex justify-content-between"
+                            >
+                              <li class="list-inline-item items-list">
+                                <p
+                                  class="py-1 px-2 rounded text-white"
+                                  style="background-color: #f37a27"
+                                >
+                                  Ordered
+                                </p>
+                              </li>
+                              <li class="list-inline-item items-list">
+                                <p
+                                  class="py-1 px-2 rounded text-white"
+                                  style="background-color: #f37a27"
+                                >
+                                  Shipped
+                                </p>
+                              </li>
+                              <li class="list-inline-item items-list">
+                                <p
+                                  class="py-1 px-2 rounded text-white"
+                                  style="background-color: #f37a27"
+                                >
+                                  On the way
+                                </p>
+                              </li>
+                              <li
+                                class="list-inline-item items-list text-end"
+                                style="margin-right: 8px"
+                              >
+                                <p style="margin-right: -8px">Delivered</p>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+
+                      <p class="mt-4 pt-2 mb-0">
+                        Want any help?
+                        <a href="#!" style="color: #f37a27"
+                          >Please contact us</a
+                        >
+                      </p> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <!-- <button type="button" id="editSaveBtn" class="btn btn-primary">
+              Save
+            </button> -->
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Order Modals -->
+
     <!-- Bootstrap JS -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- Custom Script -->
     <script src="./js/sellerDashboard.js" type="module"></script>
+    <script>
+      var tooltipTriggerList = [].slice.call(
+        document.querySelectorAll('[data-bs-toggle="tooltip"]')
+      );
+      var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+        return new bootstrap.Tooltip(tooltipTriggerEl);
+      });
+    </script>
     <script type="module">
       import { DbRepo } from "../Repository/DbRepo.js";
-      // localStorage.clear();
-      // indexedDB.deleteDatabase("AppDB");
+
       DbRepo.setUpLocalStorage();
     </script>
   </body>
