--- a/Views/sellerDashboard.html
+++ b/Views/sellerDashboard.html
@@ -100,7 +100,9 @@
           >
             <li><a class="dropdown-item" href="#">New project...</a></li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li>
+              <button class="dropdown-item" id="showProfileBtn">Profile</button>
+            </li>
             <li><hr class="dropdown-divider" /></li>
             <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
