--- a/Views/catalog.html
+++ b/Views/catalog.html
@@ -74,7 +74,7 @@
             <!-- Sidebar -->
             <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
                 <div class="position-sticky pt-3">
-                    <ul class="nav flex-column">
+                    <ul class="nav flex-column" id="categoriesList">
                         <li class="nav-item">
                             <a id="all" class="nav-link active selected" href="#" data-category-id="1">All</a>
                         </li>
