edit small things

--- a/Views/catalog.html
+++ b/Views/catalog.html
@@ -102,13 +102,13 @@
             <!-- Main content -->
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 id="categoryTitle" class="h2">Dashboard</h1>
+                    <h1 id="categoryTitle" class="h2"></h1>
                     <button id="sidebarToggle" class="btn btn-primary d-md-none">
-                        <i class="bi bi-list"></i> Toggle Sidebar
+                        <i class=""></i> Categories
                     </button>
                 </div>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4" id="productCardsContainer">
-                    <p>Main content goes here.</p>
+                    <p></p>
                 </div>
             </main>
         </div>
