--- a/Views/css/sellerDashboard.css
+++ b/Views/css/sellerDashboard.css
@@ -167,3 +167,11 @@ main {
   width: 100%;
   height: 100%;
 }
+
+.my_qty_select {
+  width: 100px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  line-height: 16px;
+}
