solve error user...

--- a/Views/catalog.html
+++ b/Views/catalog.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/bootstrap-icons.css">
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/catalog.js" defer></script>
+    <script type="module" src="/Config/Constants.js" defer></script>
+
 
 </head>
 <body>
