solve user... error

--- a/Views/catalog.html
+++ b/Views/catalog.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/bootstrap-icons.css">
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/Config/Constants.js" defer></script>
     
 </head>
 <body>
