add style to Seller Dashboard

--- a/Views/sellerDashboard.html
+++ b/Views/sellerDashboard.html
@@ -21,9 +21,9 @@
     </script> -->
   </head>
   <body>
-    <div class="content-wrapper">
+    <div class="content-wrapper ">
       <!-- Sidebar -->
-      <nav class="d-flex flex-column flex-shrink-0 p-3 bg-light" id="sidebar">
+      <nav class="d-flex flex-column flex-shrink-0  p-3 bg-light" id="sidebar">
         <a
           href="/"
           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none"
@@ -31,7 +31,10 @@
           <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap"></use>
           </svg>
-          <span class="fs-4">Sidebar</span>
+          <!-- <span class="fs-4">Sidebar</span> -->
+          <a href="/index.html">
+            <img id="logo" src="images/logo.png" alt="Logo" width="140" height="50">
+          </a>
         </a>
         <hr />
         <ul class="nav nav-pills flex-column mb-auto">
@@ -111,8 +114,8 @@
       </nav>
 
       <!-- Content Area -->
-      <main class="px-4" id="content">
-        <div class="container-fluid" id="MainContent"></div>
+      <main class="px-4 " id="content">
+        <div class="container-fluid  headerm" id="MainContent"></div>
       </main>
     </div>
     <!-- Confirmation Modal -->
