--- a/Views/ProductDetails.html
+++ b/Views/ProductDetails.html
@@ -75,9 +75,24 @@
         </div>
       </nav>
 
+
+
+
+      <div class="container mt-5" id="container">
+        <!-- Product details will be dynamically rendered here -->
+    </div>
+
+    <script src="js/ProductDetails.js" type="module"></script>
+
+
+
+
+
+
+
       
 
-    <div class="container mt-5" id="container">
+     <div class="container mt-5" id="container">
         <div class="row">
             <!-- Product Images -->
             <div class="col-md-6 mb-4 d-flex justify-content-center align-items-center product-img">
@@ -133,7 +148,7 @@
             </div>
         </div>
     </div>
-
+ 
 
 
 
